--- a/Forms/frmPNR.resx
+++ b/Forms/frmPNR.resx
@@ -117,9 +117,6 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="tabPageFinisher.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
   <metadata name="ttpToolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
@@ -135,12 +132,15 @@ For more details on the Visa Waiver Program, a list of VWP eligible countries an
     <value>Please be advised that all Seamen entering Brazil are required to have their joining letters, or letter of guarantee written in Portuguese.  
 These must be provided by their respective shipping companies.  Letters in English are no longer accepted.</value>
   </data>
-  <data name="chkElecItemsBan.ToolTip" xml:space="preserve">
+  <data name="chkItnElecItemsBan.ToolTip" xml:space="preserve">
     <value>Important Security information
 UK and US authorities have imposed a ban on electrical items larger than mobile phones being carried in the cabin of inbound flights from specific countries.
 These items, including laptops, e-readers and tablets, must now be placed in your hold baggage.
 For more information please contact your ATPI consultant or refer to the airline web site.</value>
   </data>
+  <metadata name="menuITNSelectCopy.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>125, 17</value>
+  </metadata>
   <metadata name="Id.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -160,7 +160,7 @@ For more information please contact your ATPI consultant or refer to the airline
     <value>True</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>25</value>
+    <value>47</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
